--- a/app/src/main/res/layout/activity_tela_produtos.xml
+++ b/app/src/main/res/layout/activity_tela_produtos.xml
@@ -4,4 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TelaProdutos"/>
+    android:background="@drawable/telaprodutos"
+    tools:context=".TelaProdutos">
+
+    <ListView
+        android:id="@+id/listaprodutos"
+        android:layout_width="0dp"
+        android:layout_height="549dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
