--- a/app/src/main/res/layout/activity_tela_rec_senha.xml
+++ b/app/src/main/res/layout/activity_tela_rec_senha.xml
@@ -5,43 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/telasenha"
+    android:onClick="login"
     tools:context=".TelaRecSenha">
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="23dp"
-        android:text="Digite o email cadastrado para recuperação:"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/emailrec"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailrec"
-        android:layout_width="299dp"
+        android:layout_width="249dp"
         android:layout_height="0dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="346dp"
+        android:layout_marginBottom="157dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginBottom="531dp"
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="123dp"
         android:onClick="recuperar"
-        android:text="Recuperar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailrec" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="73dp"
+        android:layout_height="43dp"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="32dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
