--- a/app/src/main/res/layout/activity_tela_produtos.xml
+++ b/app/src/main/res/layout/activity_tela_produtos.xml
@@ -5,17 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/telaprodutos"
-    tools:context=".TelaProdutos">
+    android:orientation="vertical"
+    tools:context=".TelaProdutos"
+    android:windowSoftInputMode="adjustPan"
+    android:padding="16dp">
+
 
     <ListView
         android:id="@+id/listaprodutos"
         android:layout_width="0dp"
-        android:layout_height="549dp"
+        android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSearch" />
+
+    <EditText
+        android:id="@+id/etSearch"
+        android:layout_width="265dp"
+        android:layout_height="45dp"
+        android:dividerHeight="1dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginBottom="64dp"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="Pesquise"
+        app:layout_constraintBottom_toTopOf="@+id/listaprodutos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
