--- a/app/src/main/res/layout/activity_tela_carrinho.xml
+++ b/app/src/main/res/layout/activity_tela_carrinho.xml
@@ -2,30 +2,44 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/telaprodutos"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:windowSoftInputMode="adjustPan"
     tools:context=".TelaCarrinho">
 
     <ListView
         android:id="@+id/listaCarrinho"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="475dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginBottom="147dp"
+        android:layout_width="82dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="24dp"
+        android:onClick="TelaProdutos"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/listaCarrinho"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="78dp"
+        android:layout_height="38dp"
+        android:onClick="addCupom"
+        android:text="cupom"
+        tools:layout_editor_absoluteX="306dp"
+        tools:layout_editor_absoluteY="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
