--- a/app/src/main/res/layout/custom_dropdown_cart.xml
+++ b/app/src/main/res/layout/custom_dropdown_cart.xml
@@ -20,6 +20,30 @@
         android:paddingStart="10dp"
         android:textSize="20dp" />
 
+    <TextView
+        android:id="@+id/product_quantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantidade: 1" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/decrement_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-" />
+
+        <Button
+            android:id="@+id/increment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+" />
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/details"
         android:layout_width="match_parent"
