--- a/app/src/main/res/layout/activity_tela_produtos.xml
+++ b/app/src/main/res/layout/activity_tela_produtos.xml
@@ -39,13 +39,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="50dp"
         android:layout_height="47dp"
         android:onClick="TelaCarrinho"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="-5dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
