--- a/app/src/main/res/layout/custom_dropdown_cart.xml
+++ b/app/src/main/res/layout/custom_dropdown_cart.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+<LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/product_layout">
 
     <ImageView
         android:id="@+id/icon"
@@ -55,7 +60,6 @@
         android:paddingTop="10dp"
         android:visibility="gone">
 
-
         <TextView
             android:id="@+id/product_description"
             android:layout_width="wrap_content"
@@ -65,5 +69,15 @@
             android:text="Descrição aqui" />
 
     </LinearLayout>
-
 </LinearLayout>
+
+    <!-- Posicionando qtdcart de forma flexível -->
+<TextView
+android:id="@+id/qtdcartt"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_alignParentEnd="true"
+android:layout_marginEnd="180dp"
+android:layout_marginTop="120dp" />
+
+    </RelativeLayout>
